baml_language/crates/baml_tests/snapshots/parser_speculative/baml_tests__parser_speculative__02_parser__ambiguous_function.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Ambiguous"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "input"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    LLM_FUNCTION_BODY
      L_BRACE "{"
      CLIENT_FIELD "client GPT4"
        KW_CLIENT "client"
        WORD "GPT4"
      R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AnotherLLM"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "input"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    LLM_FUNCTION_BODY
      L_BRACE "{"
      WORD "clent"
      WORD "GPT4"
      PROMPT_FIELD
        WORD "prompt"
        RAW_STRING_LITERAL
          HASH "#"
          QUOTE """
          PROMPT_TEXT "Process:"
            WORD "Process"
            COLON ":"
          TEMPLATE_INTERPOLATION "{{ input }}"
            L_BRACE "{"
            L_BRACE "{"
            WORD "input"
            R_BRACE "}"
            R_BRACE "}"
          QUOTE """
          HASH "#"
      R_BRACE "}"

=== ERRORS ===
Error: Expected LLM function missing 'prompt' field, found '}'
   ╭─[ ambiguous_function.baml:5:1 ]
   │
 5 │ }
   │ ┬  
   │ ╰── Expected LLM function missing 'prompt' field, found '}'
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Only 'client' and 'prompt' allowed in LLM function, found 'clent', found identifier
   ╭─[ ambiguous_function.baml:9:3 ]
   │
 9 │   clent GPT4  // Typo in "client"
   │   ──┬──  
   │     ╰──── Expected Only 'client' and 'prompt' allowed in LLM function, found 'clent', found identifier
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Only 'client' and 'prompt' allowed in LLM function, found 'GPT4', found identifier
   ╭─[ ambiguous_function.baml:9:9 ]
   │
 9 │   clent GPT4  // Typo in "client"
   │         ──┬─  
   │           ╰─── Expected Only 'client' and 'prompt' allowed in LLM function, found 'GPT4', found identifier
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected LLM function missing 'client' field, found '}'
    ╭─[ ambiguous_function.baml:11:1 ]
    │
 11 │ }
    │ ┬  
    │ ╰── Expected LLM function missing 'client' field, found '}'
    │ 
    │ Note: Error code: E0010
────╯
